# cppinvert

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  build.sh
conan/: conanfile.txt
cppinvert/: IocContainer.hpp
include/ioc/: IocContainer.hpp
test/: CMakeLists.txt  TestIocContainer.cpp  test.cpp
